fix : swagger ui user token header로 받는 것으로 수정