@@ -3,6 +3,7 @@ package net.causw.config.swagger;
 import net.causw.domain.model.util.StaticValue;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
@@ -15,6 +16,7 @@ import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -30,7 +32,15 @@ public class SwaggerConfig {
                 .build()
                 .apiInfo(this.apiInfo())
                 .securityContexts(Collections.singletonList(securityContext()))
-                .securitySchemes(List.of(apiKey()));
+                .securitySchemes(List.of(apiKey()))
+                .globalOperationParameters(Arrays.asList(
+                        new springfox.documentation.builders.ParameterBuilder()
+                                .name("Authorization")
+                                .description("JWT token")
+                                .modelRef(new springfox.documentation.schema.ModelRef("string"))
+                                .parameterType("header")
+                                .required(true)
+                                .build()));
     }
 
     private ApiInfo apiInfo() {
@@ -46,13 +56,10 @@ public class SwaggerConfig {
     }
 
     private SecurityContext securityContext() {
-        return springfox
-                .documentation
-                .spi.service
-                .contexts
-                .SecurityContext
-                .builder()
-                .securityReferences(defaultAuth()).forPaths(PathSelectors.any()).build();
+        return SecurityContext.builder()
+                .securityReferences(defaultAuth())
+                .forPaths(PathSelectors.any())
+                .build();
     }
 
     List<SecurityReference> defaultAuth() {
